# asr_tts_gateway

./: .gitignore  DECISIONS.md  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
asr_service/: Dockerfile  requirements.txt
asr_service/app/: main.py
asr_service/tests/: test_asr.py
client/: echo_bytes.py  requirements.txt  stream_tts.py
common/: logger.py
gateway/: Dockerfile  requirements.txt
gateway/app/: main.py
gateway/tests/: test_gateway.py
tts_service/: Dockerfile  requirements.txt
tts_service/app/: main.py
tts_service/tests/: test_tts.py
